--- a/18.2-modifying-elements/index.html
+++ b/18.2-modifying-elements/index.html
@@ -38,8 +38,7 @@ initial-scale=1.0" />
     document.querySelector("#description").style.display = "inline-block";
     // 4. Change the body to a background color of green
     document.body.style.backgroundColor = "green";
-    // 5. Change the documents title from “Modifying Elements”
-    // to something else.
+    // 5. Change the documents title from “Modifying Elements to something else.
     document.title = "something else";
 </script>
 
