--- a/21.1-age/index.html
+++ b/21.1-age/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>age</title>
-    <script src="scripts/index.js" defer></script>
+    <script src="scrips/index.js" defer></script>
 </head>
 
 <body>
