--- a/21.3-text-area/index.html
+++ b/21.3-text-area/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>font size</title>
+    <title>text area</title>
     <script src="scrips/index.js" defer></script>
 </head>
 
