--- a/18.4-simley/index.html
+++ b/18.4-simley/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css">
     <title>simley</title>
 </head>
 
@@ -11,6 +12,7 @@
     <H1>How many smileys do you want to see?</H1>
     <input id="smileys-input" type="text">
     <input id="smileys-submit" type="button" value="submit">
+    <div class="smileys-container"></div>
     <script src="sctipts/main.js"></script>
 </body>
 
