--- a/23.2-stop-watch/index.html
+++ b/23.2-stop-watch/index.html
@@ -6,12 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styels/style.css">
-    <title>ticking clock</title>
+    <title>stop watch</title>
     <script src="scripts/index.js" defer></script>
 </head>
 
 <body>
-    <h1 class="clock"></h1>
+    <h1 class="stop-watch">00:00:00</h1>
+    <div class="buttons-container">
+        <button class="start">start</button>
+        <button class="stop">stop</button>
+    </div>
 </body>
 
 </html>
